Prevent keyboard popping up on iOS

--- a/src/components/ControlLayer.module.css
+++ b/src/components/ControlLayer.module.css
@@ -11,6 +11,7 @@
   color: transparent;
   background: transparent;
   resize: none;
+  touch-action: none;
 
   aspect-ratio: 16 / 9;
 }
